# davinci-codex

./: .gitignore  .pre-commit-config.yaml  3D_VIEWER_IMPLEMENTATION_SUMMARY.md  ABSTRACT.md  AGENTS.md  ARCHITECTURE.md  CITATION.cff  CLAUDE_CONTINUATION_PROMPT.md  CLEAN_PROJECT_SUMMARY.md  CODEX_REVIEW_PROMPT.md  CODE_OF_CONDUCT.md  COMMIT_PROMPT.md  COMPLETE_CAD_SUMMARY.md  COMPREHENSIVE_REVIEW_REPORT.md  CONTENT_ENHANCEMENT_PLAN.md  CONTRIBUTING.md  DAVINCI_INNOVATION_SUMMARY.md  DA_VINCI_VISION.md  Dockerfile  ENHANCED_ORNITHOPTER_SUMMARY.md  ENHANCEMENT_PLAN.md  ETHICS.md  GEMINI.md  IMPLEMENTATION_SUMMARY.md  LICENSE  METHODOLOGY.md  Makefile  NEXT_AI_PROMPT.md  PROFESSIONAL_DEPLOYMENT_COMPLETE.md  PROFESSIONAL_FEATURES.md  PROGRAMMABLE_LOOM_ACHIEVEMENT.md  README.md  REFERENCES.md  RENAISSANCE_REVIEW_GUIDE.md  RENAISSANCE_TRANSFORMATION_REPORT.md  REPOSITORY_STRUCTURE.md  REVOLVING_BRIDGE_PROMPT.md  SECURITY.md  SITE_IMPROVEMENTS.md  TRANSFORMATION_SUMMARY.md  (+28 more)
.claude/agents/: innovation-discovery.json
.cursor/plans/: fix-github-repo---jekyll-site-b797154e.plan.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+2 more)
PROVENANCE/: README.md  enhanced_manuscript_registry.yaml  manuscript_index.yaml
aerial_screw_results/: efficiency_surface_data.csv  power_surface_data.csv  thrust_surface_data.csv
analysis/: README.md  aerial_screw_blade_pitch_study.py  energy_budget.py  lion_power_analysis.py  materials_analysis.py  spring_system_design.py  vortex_simulation.py  weight_system_design.py
artifacts/: manufacturing_notes.txt  power_system_recommendation.txt
cad/: musical_instruments_cad_generator.py  technical_drawing_pipeline.py
development/: COMMIT_PROMPT.md  LEONARDO_WEBSITE_PROMPT.md  README.md
docs/: .gitignore  3D_VIEWER_DOCUMENTATION.md  3d-gallery.md  BRANDING_GUIDE.md  Gemfile  MAINTENANCE.md  TESTING.md  _config.yml  aerial_screw.html  aerial_screw.md  aerial_screw_viewer.md  bobbin_winder.html  branding.md  cross_pollination_explorer.html  dashboard.md  educational_infographics.md  feed.xml  gallery.html  hydraulic_systems.html  image_documentation.md  index.html  index.md  invention_timeline.html  mechanical_carillon.md  mechanical_drum.html  mechanical_drum.md  mechanical_ensemble.md  mechanical_lion.html  mechanical_lion.md  mechanical_lion_viewer.md  mechanical_odometer.html  mechanical_odometer.md  mechanical_organ.html  mechanical_organ.md  mechanical_trumpeter.html  mechanical_trumpeter.md  methodology_statuses.md  mirror_writing_interface.html  musical_instruments_viewer.md  navigation.html  (+25 more)
education/: EDUCATIONAL_REVOLUTION_SUMMARY.md  README.md  assessment_framework.md  curriculum_masterplan.md  graduate_research.md  learning_platform_architecture.md  museum_partnerships.md  professional_development.md  undergraduate_courses.md
examples/: comparative_analysis.py  leonardos_musical_workshop.py  mechanical_lion_demo.py  quickstart.py  renaissance_composition_demo.py  renaissance_ensemble_performance.py  renaissance_music_demo.py
hf_space/: README.md
inventions/: README.md  catalog.yaml  module_metadata.yaml
ip_nexus/: README.md
licenses/: LICENSE-CC0  README.md
materials/: renaissance_db.yaml
materials_analysis/: MATERIALS_ANALYSIS_SUMMARY.md  cost_availability_analysis.py  historical_supplier_analysis.txt  lion_materials_analysis.py  material_selection_matrix.py  material_specifications.txt  renaissance_materials_database.py
mechanical_lion_complete_package/: README.md
notebooks/: Quickstart.ipynb  aerial_screw.ipynb  armored_walker.ipynb  bobbin_winder.ipynb  gear_bending_validation.ipynb  mechanical_drum.ipynb  mechanical_ensemble.ipynb  mechanical_lion.ipynb  mechanical_odometer.ipynb  naca0012_agard.ipynb  ornithopter.ipynb  ornithopter_fsi_validation.ipynb  parachute.ipynb  parachute_drop_validation.ipynb  programmable_loom.ipynb  revolving_bridge.ipynb  rolling_friction_validation.ipynb  self_propelled_cart.ipynb  variable_pitch_mechanism.ipynb
scripts/: audit_missing_assets.py  check_invention_coverage.py  check_links.py  check_simulation_seeds.py  generate_additional_assets.py  generate_brand_assets.py  generate_simulation_gallery.py  generate_visual_assets.py  generate_visual_assets_simple.py  regen_inventions_index.py  regen_readme_registry_table.py  sync_artifacts_to_docs.py  validate_cad_models.py  validate_invention_metadata.py  validate_links.py
showcase/: README.md  flight_inventions.md  index.md  mechanical_inventions.md  musical_instruments.md
src/: __init__.py
synthesis/: README.md  __init__.py
tests/: conftest.py  test_aerial_screw.py  test_bobbin_winder.py  test_cache.py  test_catalog_schema.py  test_concert.py  test_flapping_model.py  test_fmea.py  test_intent_schema.py  test_material_comparisons.py  test_mechanical_carillon.py  test_mechanical_drum.py  test_mechanical_ensemble.py  test_mechanical_lion.py  test_mechanical_odometer.py  test_mechanical_organ.py  test_mechanical_trumpeter.py  test_ornithopter.py  test_ornithopter_validation.py  test_parachute.py  test_parachute_acceptance.py  test_pipeline.py  test_primitives_validated.py  test_programmable_flute.py  test_revolving_bridge.py  test_self_propelled_cart.py  test_sweeps.py  test_timbre.py  test_toulmini_logic.py  test_tva_datasets.py  test_tva_ornithopter.py  test_uncertainty.py  test_validation_assets.py  test_validation_registry.py  test_viola_organista.py  test_vortex_conditions.py
tools/: manuscript_scanner.py
toulmini/: server.py
tva/: README.md
validation/: README.md
web/: aerial_screw.html  ai_codex_explorer.html  armored_walker.html  cross_pollination_explorer.html  gallery.html  index.html  invention_timeline.html  leonardo_challenge_platform.html  leonardo_design_system.css  mechanical_carillon.html  mechanical_ensemble.html  mechanical_trumpeter.html  mirror_writing_interface.html  ornithopter.html  parachute.html  programmable_flute.html  programmable_loom.html  revolving_bridge.html  self_propelled_cart.html  simulation_framework.js  variable_pitch_mechanism.html  viola_organista.html
(+448 files in other folders)
