[project]
name = "davinci-codex"
version = "1.0.0"
description = "Open, reproducible reconstructions of Leonardo da Vinci's civil inventions."
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "sympy",
    "matplotlib>=3.6",
    "pytest>=7.2",
    "ruff>=0.3",
    "mypy>=1.0",
    "typer",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "trimesh",
    "meshio",
    "pillow",
    "rich>=13.0"
]
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Hunter Bown", email = "hunter@shannonlabs.dev" },
    { name = "da Vinci Codex Contributors" }
]
keywords = ["leonardo", "davinci", "engineering", "renaissance", "inventions", "simulation", "CAD"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
davinci-codex = "davinci_codex.cli:app"

[project.urls]
Homepage = "https://github.com/Shannon-Labs/davinci-codex"
Documentation = "https://shannon-labs.github.io/davinci-codex/"
Repository = "https://github.com/Shannon-Labs/davinci-codex.git"
"Bug Tracker" = "https://github.com/Shannon-Labs/davinci-codex/issues"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "C901", "UP006", "UP035", "UP045"]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = ["-ra", "-q", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["src"]
